Removed what was left of the revert.  Forgot some, oops!